# marrir-apiZ

./: .env  .gitignore  Makefile  README.md  api.dockerfile  cron_jobs.py  db.dockerfile  docker-compose.yml  init.sql  main.py  mydatabase.backup  pyproject.toml  requirements.txt  seed.py  test_db.py  test_login.py  test_registeration.py
core/: auth.py  context_vars.py  security.py
custom_types/: custom_types.py
data_models/: additionallanguagemodel.py  agentrecruitmentmodel.py  assignagentmodel.py  cvmodel.py  migrate.py  notificationreadmodel.py  promotionmodel.py  startedagentprocessmodel.py  usermodel.py
data_repositories/: assignagent.py  checkout.py  companyinfo.py  job.py  notification.py  offer.py  payment.py
data_routers/: companyinfo.py  cv.py  dashboard.py  job.py  payment.py  process.py  promotion.py  promotions.py  rating.py  refund.py  stat.py  transfer.py  user.py
data_schemas/: assignagentschema.py  companyinfoschema.py  cvschema.py  dashboardstatschema.py  refundschema.py  reserveschema.py  statschema.py
logger/: __init__.py
models/: __init__.py  additionallanguagemodel.py  addressmodel.py  agentrecruitmentmodel.py  assignagentmodel.py  base.py  batchreservemodel.py  batchtransfermodel.py  companyinfomodel.py  cvmodel.py  db.py  educationmodel.py  employeemodel.py  employeestatusmodel.py  invoicemodel.py  jobapplicationmodel.py  jobmodel.py  migrate.py  notificationmodel.py  notificationreadmodel.py  occupationcategorymodel.py  occupationmodel.py  offermodel.py  paymentmodel.py  processmodel.py  profileviewmodel.py  promotionmodel.py  (+12 more)
(+133 files in other folders)
